Fixed spacing issues around Learn More button

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
 
 body {
     width: 100%;
-    overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +24,8 @@ body {
 }
 
 .card {
-    padding: 4rem 3rem;   
+    /* height: 28rem; */
+    padding: 3rem 3.25rem;
 }
 
 #sedan {
@@ -55,17 +55,19 @@ body {
 .details {
     color: var(--transparent-white);
     line-height: 1.75rem;
-    margin-bottom: 3rem;
     padding-right: .25rem;
 }
 
 .learn-more {
+    display: block;
+    width: 8rem;
+    text-align: center;
     text-decoration: none;
     border: 3px solid var(--very-light-gray);
     background-color: var(--very-light-gray);
-    padding: 1rem 2.25rem;
+    padding: 1rem 1rem;
     border-radius: 1.75rem;
-    
+    margin-top: 2rem;
 }
 
 #sedan a {
@@ -94,6 +96,18 @@ body {
     background-color: var(--very-dark-cyan);
     color: var(--very-light-gray);
 }
+
+
+
+@media only screen and (min-width: 1440px) {
+    
+}
+
+
+
+/* border radius, flex direction */
+
+
 
 
 
